--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -126,7 +126,7 @@
                     <div style="color: #ea521c; font-size: 35px; margin-top: 20px;">长按识别二维码</div>
                 </div>
             </div>
-            <div style="font-size: 40px; text-align: center; padding: 0 50px;">
+            <div style="font-size: 40px; text-align: center; padding: 0 50px; background-color: #ffffff;">
                 下单后发送订单截图给<span style="color: #ea521c;">【那些花儿】</span>无需验证，即可获得红包<span style="color: #ea521c;">【微信号:woshibing1992926】</span>
             </div>
         </div>
