静态资源访问入口修改

--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -170,6 +170,9 @@
             <div id="copySuccessInfo" style="display: none; margin-top: 20px;">
                 <img style="width: 100%;" src="${ctx}/static/image/icon/copySuccess.png">
             </div>
+            <div style="margin-top: 10px;">
+                <img style="width: 100%; border: 2px dotted #E91E63;" src="${ctx}/static/image/icon/rate.png">
+            </div>
         </div>
         <div id="copyTip" style="text-align: center; display: none">
             <span style="padding: 7px 30px; background-color:rgba(0, 0, 0,0.7); border-radius: 7px; font-weight: bolder; color: #fff;"></span>
