--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -59,6 +59,25 @@
         </div>
     </div>
 
+    <!--双十一预热活动-->
+    <div class="c_info_content">
+        <div class="c_red_content">
+            <div>
+                <div style="color: #ffffff; font-size: 12px; color: #FFD700; text-align: center;">【双十一预热优惠活动】</div>
+                <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: left;">
+                    <span style="color: #ffffff; color: #FFD700;">1.[返利加量]:</span>10月31号之前下单,每单在预计红包返利基础之上再额外加30%的红包返利!
+                </div>
+                <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: left;">
+                    <span style="color: #ffffff; color: #FFD700;">2.[拉新活动]:</span>京东淘宝返利群老用户拉新用户入群,新用户下单拉新老用户即可获得一次性0.5元现金红包!新用户搜索入群,下单也可一次性获得0.5元现金红包
+                </div>
+                <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: center;">
+                    入群搜索微信<span style="color: #ffffff; color: #FFD700;">[woshibing1992926(那些花儿)]</span>,感谢各位的关注!
+                </div>
+                <!--<span style="color: #ffffff; font-size: 12px;">下单后发送订单截图给[<span style="color: #FFD700; font-size: 12px;">那些花儿(微信号:woshibing1992926)</span>]无需验证，即可获得红包</span>-->
+            </div>
+        </div>
+    </div>
+
     <div class="c_div_10px"></div>
 
     <!-- 优惠券信息 -->
@@ -125,6 +144,9 @@
                 <div style="float: left; width: 450px; padding: 10px; text-align: center;" id="qrcodeDiv">
                     <div style="color: #ea521c; font-size: 35px; margin-top: 20px;">长按识别二维码</div>
                 </div>
+            </div>
+            <div style="margin-top: 10px; text-align: center;">
+                <span style="background-color: #eeeeee; color: #ec1833; padding: 2px 20px; margin: 0; font-size: 40px;"><span style="background-color: #ec1833; color: #ffffff; padding: 2px 20px; margin: 0; display:inline-block; font-size: 40px;">惠</span>10.31前下单,现金红包加量30%![例:显示最高返利1元,返利红包+30%,即最高返利1.3元!]</span>
             </div>
             <div style="font-size: 40px; text-align: center; padding: 0 50px; background-color: #ffffff;">
                 下单后发送订单截图给<span style="color: #ea521c;">【那些花儿】</span>无需验证，即可获得红包<span style="color: #ea521c;">【微信号:woshibing1992926】</span>
