返利信息更改

--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -145,7 +145,7 @@
                     <div style="color: #ea521c; font-size: 35px; margin-top: 20px;">长按识别二维码</div>
                 </div>
             </div>
-            <div style="margin-top: 10px; text-align: center;">
+            <div style="font-size: 40px; text-align: center; background-color: #ffffff;">
                 <span style="background-color: #eeeeee; color: #ec1833; padding: 2px 20px; margin: 0; font-size: 40px;"><span style="background-color: #ec1833; color: #ffffff; padding: 2px 20px; margin: 0; display:inline-block; font-size: 40px;">惠</span>10.31前下单,现金红包加量30%![例:显示最高返利1元,返利红包+30%,即最高返利1.3元!]</span>
             </div>
             <div style="font-size: 40px; text-align: center; padding: 0 50px; background-color: #ffffff;">
