活动信息更新

--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -65,9 +65,6 @@
             <div>
                 <div style="color: #ffffff; font-size: 12px; color: #FFD700; text-align: center;">【双十一活动】</div>
                 <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: left;">
-                    <span style="color: #ffffff; color: #FFD700;">[返利加量]:</span>11-11号 ~ 11-17号,每单在预计红包返利基础之上再额外加<span style="font-size: 11px;">40%</span>的红包返利!
-                </div>
-                <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: left;">
                     <span style="color: #ffffff; color: #FFD700;">[拉新活动]:</span>(长期有效)京东淘宝返利群老用户拉新用户入群,新用户下单拉新老用户即可获得一次性<span style="font-size: 11px;">0.5</span>元现金红包!新用户搜索入群,下单也可一次性获得<span style="font-size: 11px;">0.5</span>元现金红包
                 </div>
                 <div style="color: #ffffff; font-size: 11px; color: #ffffff; text-align: center;">
@@ -148,8 +145,8 @@
             <div style="text-align: center; background-color: #ffffff;">
                 <div class="c_info_content">
                     <div class="c_red_content">
-                        <div style="font-size: 50px; color: #FFD700;">
-                            11-11号 ~ 11-17号活动期间下单!,现金红包加返40%!
+                        <div style="font-size: 40px; color: #FFD700;">
+                            老用户拉新用户下单老用户即可一次用获得0.5元拉新奖励!
                         </div>
                     </div>
                 </div>
